@@ -2,7 +2,7 @@
 # BOARD18make is run to create a new BOARD18 distribution.
 
 # Set versionNo to the version number of the new distribution
-versionNo="2.7.4"
+versionNo="2.7.5"
 
 # Set BD18Root to the root of the BOARD18 directory structure.
 BD18Root=~/board18test/
