@@ -97,7 +97,8 @@ CREATE TABLE `game_player` (
   `game_id` int(11) NOT NULL,
   `player_id` int(11) NOT NULL,
   `status` varchar(10) NOT NULL DEFAULT 'P',
-  PRIMARY KEY (`game_id`,`player_id`)
+  PRIMARY KEY (`game_id`,`player_id`),
+  KEY `player_id` (`player_id`,`game_id`)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
 /*!40101 SET character_set_client = @saved_cs_client */;
 
